[package]
name = "lioness"
version = "0.1.0"
authors = ["Jeffrey Burdges <burdges@gnunet.org>", "David Stainton <dstainton415@gmail.com>"]
description = "Lioness wide block cipher"
homepage = "https://github.com/burdges/lioness-rs"
repository = "https://github.com/burdges/lioness-rs.git"
documentation = "https://docs.rs/lioness/"
readme = "README.md"
keywords = ["cryptography","cipher","lioness", "sphinx", "mixnet"]
license = "MIT"

[dependencies]
rust-crypto = "^0.2"
arrayref = "^0.3"

[dev-dependencies]
rand = "^0.3"
rustc-serialize = "0.3"
